Fix spacing above and below main heading level. (see #743)

--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -88,6 +88,7 @@ h1 {
     font-family: Basetica, $headings-font;
     font-size: 34px;
     line-height: 110%;
+    margin: 0.5rem 0;
 }
 h2 {
     font-size: 22px;
